[package]
name = "srun_dll"
version = "0.1.1"
edition = "2021"
authors = ["Forgot_Dream"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srun = {git = "https://github.com/zu1k/srun.git",branch = "master",default-features = true}

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]